--- a/res_credits.html
+++ b/res_credits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.1.js"></script></script>
+	<script src="jquery-2.1.1.js"></script>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,700,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
