--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<!-- All responsive n shit -->
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script language="javascript" src="http://www.bronze-age.com/email.js"></script>
+	<script language="javascript" src="email.js"></script>
 	<title>FQDB</title>
 </head>
 <body>
