Attempt to fix fonts

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,7 @@
 <head>
 	<script src="jquery-2.1.1.js"></script>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,700,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
-	<!-- All responsive n shit -->
+	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
