--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<script src="jquery-2.1.1.js"></script>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<!-- All responsive n shit -->
+	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
