--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="0; url=http://homepage.tudelft.nl/p9t69/resume201411.pdf" />
+<meta http-equiv="refresh" content="0; url=http://homepage.tudelft.nl/p9t69/resume201411_censored.pdf" />
 </head>
