--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
 		<li><a href="current.html">Current</a></li>
 		<li><a href="previous.html">Previous</a></li>
 		-->
+		<li><a href="resume.html">Resume</a></li>
 		<li><a href="https://www.twitter.com/FQdeB">Twitter</a></li>
 		<li><a href="https://medium.com/@FQdeB">Blog</a></li>
 		<li><a href="contact.html">Contact</a></li>
