--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,19 @@
 	
 	<section id="main">
 	<h2>Get in touch</h2>
-	<br />
 	<div id="contact">
-	<a href="https://www.twitter.com/FQdeB"><img src="res/icons/32-twitter.png" /></a>
+	<h3>Social networks and mail</h3>
+	<a href="https://www.twitter.com/FQdeB"><img src="res/icons/32-twitter.png" style="margin-top: 0.4em;" /></a>
 	<a href="https://www.linkedin.com/profile/view?id=378463039"><img src="res/icons/32-linkedin.png" /></a>
 	<a href="https://fb.me/felix.deboer"><img src="res/icons/32-facebook.png" /></a>
 	</div>
-	<p><br />E-mail: <br /><script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
+	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
+	<p><h3>Other channels</h3>
+	<a href="http://www.instructables.com/member/MaterialBall/">Instructables</a>
+	<span class="small_description">Tutorials on fixing and creating anything from Arduino to woodworking.</span>
+	<br />
+	<a href="http://www.last.fm/user/sdk164">Last.fm</a>
+	<span class="small_description">Feel me to judge me on the music I listen, but do it in silence.</span>	
 	</section>
 	
 	<div id="footer"></div>
