--- a/res_credits.html
+++ b/res_credits.html
@@ -3,12 +3,10 @@
 <head>
 	<script src="jquery-2.1.1.js"></script>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,700,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
-	<!-- All responsive n shit -->
+	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script language="javascript" src="http://www.bronze-age.com/email.js"></script>
+	<script language="javascript" src="email.js"></script>
 	<title>FQDB</title>
 </head>
 <body>
@@ -19,15 +17,21 @@
 	});
 	</script>
 	
-	<section id="main">
-	<h2>The following media were not created by me</h2>
+<section id="main">
+	<h2>Sources and credits</h2>
+	<h3>Sources</h3>
 	<ul id="credits_ref">
 		<li><a href="http://vectorpatterns.co.uk/patterns-2/grid-paper-seamless-photoshop-and-illustrator-pattern/">Background image</a></li>
 		<li><a href="http://www.twelveskip.com/resources/icons/1091/boxxed-flat-social-media-icons">Boxxed Flat Social Media Icons</a></li>
 		<li><a href="http://www.bronze-age.com/nospam/">Coding email links to avoid spam</a>
-		<li>jQuery hosted by <a href="http://www.asp.net/ajax/cdn">ASP.NET</a></li>
-	<ul>
-	<p><br /><em>All logos are trademarks of their respective owners.</em></p>
+		<li>Logo font: <a href="http://freakfonts.com/">FrutigerNext LT</a></li>
+		<li>Title font: <a href="https://www.google.com/fonts/">Old Standard TT</a></li>
+		<li>Paragraph font: <a href="https://www.google.com/fonts/">Open Sans 600</a></li>
+	</ul>
+	<p><em>All logos are trademarks of their respective owners.</em></p>
+	<h3>Notes</h3>
+	<p>This website needs JavaScript (jQuery) to function correctly.
+	If you have come this far JavaScript is probably enabled already.
 
 </section>
 	
