--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 	<span class="small_description">Tutorials on fixing and creating anything from Arduino to woodworking.</span>
 	<br />
 	<a href="http://www.last.fm/user/sdk164">Last.fm</a>
-	<span class="small_description">Feel me to judge me on the music I listen, but do it in silence.</span>	
+	<span class="small_description">Feel free to judge me on the music I listen, but do it in silence.</span>	
 	</section>
 	
 	<div id="footer"></div>
