IE9 notice fixes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
 	<title>FQDB</title>
+	
+	<link rel="text/css" rel="stylesheet" href="IE_notice.css"/>
 </head>
 <body>
 	<!-- 
@@ -17,7 +19,7 @@
 	Gebruik: Plaats code net onder de <body> tag.
 	-->
 	<!--[if lte IE 9]>
-		<style type="text/css">#ie6_banner{background:#333;width:100%;position:relative;padding:15px 0;margin:0;border-bottom:1px solid #111;z-index:999;}#ie6_wrap{width:1000px;margin:0 auto;}#ie6_wrap h1{font-size:18px;text-transform:none;color:#fff;background:none;margin:0 0 10px;padding:0;font-weight:bold;}#ie6_wrap p{text-align:left;font-size:12px;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;font-weight:normal;color:#fff;background:none;line-height:16px;margin:0;}#ie6_wrap p a{color:#fff;background:none;text-decoration:underline;font-size:12px;}#ie6_wrap p a:hover{color:#fff;background:none;text-decoration:none;}#ie6_links{float:right;width:272px;}#ie6_links a{float:left;background:#5a5a5a;width:85px;height:27px;padding:12px 0 0 50px;margin:0 1px 1px 0;color:#fff;}#ie6_links a:hover{text-decoration:underline;}#ie6_links img{position:absolute;margin:-5px 0 0 -35px;border:none;}</style><div id="ie6_banner"><div id="ie6_wrap"><div id="ie6_links"><a href="http://www.mozilla.com/nl"><img src="http://www.wijstoppenook.nl/site/gfx/firefox_small.png" alt="" />Firefox</a><a href="http://www.google.com/chrome"><img src="http://www.wijstoppenook.nl/site/gfx/chrome_small.png" alt="" />Chrome</a><a href="http://www.apple.com/safari"><img src="http://www.wijstoppenook.nl/site/gfx/safari_small.png" alt="" />Safari</a><a href="http://www.opera.com"><img src="http://www.wijstoppenook.nl/site/gfx/opera_small.png" alt="" />Opera</a> </div><h1>You are using an outdated version of Internet Explorer.</h1><p>This site won't function properly.<br />Try one of the browsers listed on the right.<p></div></div>
+		<div id="ie6_banner"><div id="ie6_wrap"><div id="ie6_links"><a href="http://www.mozilla.com/nl"><img src="http://www.wijstoppenook.nl/site/gfx/firefox_small.png" alt="" />Firefox</a><a href="http://www.google.com/chrome"><img src="http://www.wijstoppenook.nl/site/gfx/chrome_small.png" alt="" />Chrome</a><a href="http://www.opera.com"><img src="http://www.wijstoppenook.nl/site/gfx/opera_small.png" alt="" />Opera</a> </div><h1>You are using an outdated version of Internet Explorer.</h1><p>This site won't function properly.<br />Try one of the browsers listed on the right.<p></div></div>
 	<![endif]-->
 
 	<div id="header"></div>
