New bg, updated header

--- a/index.html
+++ b/index.html
@@ -9,19 +9,8 @@
 	<script language="javascript" src="email.js"></script>
 	<title>FQDB</title>
 	
-	<link rel="text/css" rel="stylesheet" href="IE_notice.css"/>
 </head>
 <body>
-	<!-- 
-	`Door: Maarten Hunink, Zinnebeeld
-	Versie: 1.0
-	Licentie: Creative Commons Naamsvermelding 3.0
-	Gebruik: Plaats code net onder de <body> tag.
-	-->
-	<!--[if lte IE 9]>
-		<div id="ie6_banner"><div id="ie6_wrap"><div id="ie6_links"><a href="http://www.mozilla.com/nl"><img src="http://www.wijstoppenook.nl/site/gfx/firefox_small.png" alt="" />Firefox</a><a href="http://www.google.com/chrome"><img src="http://www.wijstoppenook.nl/site/gfx/chrome_small.png" alt="" />Chrome</a><a href="http://www.opera.com"><img src="http://www.wijstoppenook.nl/site/gfx/opera_small.png" alt="" />Opera</a> </div><h1>You are using an outdated version of Internet Explorer.</h1><p>This site won't function properly.<br />Try one of the browsers listed on the right.<p></div></div>
-	<![endif]-->
-
 	<div id="header"></div>
 	<script type="text/javascript" language="javascript">
    $(document).ready(function() {
@@ -31,9 +20,9 @@
 	
 	<section id="main">
 	<h2 style="margin-bottom: 0.5em">Hello.</h2>
-	<p>My name is Felix. I follow the bachelor program of Applied Physics at <a href="http://www.tudelft.nl">Delft University of Technology</a>.</p>
-	<p>Some interests of mine include mechanical and materials science; building, modifying and disassembling devices; UI design.</p>
-	<p>You can get in touch via Twitter or send me an e-mail at <script>mail("fqdeboer","ilevn?l",-2,"")</script>.
+	<p>My name is Felix. I follow the bachelor program of Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span>.</p>
+	<p>Some interests of mine include mechanical and materials science; programming; building, modifying and disassembling devices; UI design.</p>
+	<p><br /><a href="contact.html">Contact<a></p>
 	</section>
 	
 	<div id="twitter_widget"></div>
