--- a/res_credits.html
+++ b/res_credits.html
@@ -21,7 +21,6 @@
 	<h2>Sources and credits</h2>
 	<h3>Sources</h3>
 	<ul id="credits_ref">
-		<li><a href="http://vectorpatterns.co.uk/patterns-2/grid-paper-seamless-photoshop-and-illustrator-pattern/">Background image</a></li>
 		<li><a href="http://www.twelveskip.com/resources/icons/1091/boxxed-flat-social-media-icons">Boxxed Flat Social Media Icons</a></li>
 		<li><a href="http://www.bronze-age.com/nospam/">Coding email links to avoid spam</a>
 		<li>Logo font: <a href="http://freakfonts.com/">FrutigerNext LT</a></li>
@@ -31,7 +30,8 @@
 	<p><em>All logos are trademarks of their respective owners.</em></p>
 	<h3>Notes</h3>
 	<p>This website needs JavaScript (jQuery) to function correctly.
-	If you have come this far JavaScript is probably enabled already.
+	If you have come this far JavaScript is probably enabled already.</p>
+	<p>Source is also available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a>.
 
 </section>
 	
