--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer>
-	<span class="left_footer">© FQDB 2014</span>
+	<span class="left_footer">© FQDB 2014 - hosted by <a href="https://pages.github.com/">GitHub Pages</a></span>
 	<span class="right_footer"><a href="res_credits.html">res credits</a></span>
 	</div>
 </footer>
