small layout changes

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 	<h2>Get in touch</h2>
 	<div id="contact">
 	<h3>Social networks and mail</h3>
-	<a href="https://www.twitter.com/FQdeB"><img src="res/icons/32-twitter.png" style="margin-top: 0.4em;" /></a>
+	<a href="https://www.twitter.com/FQdeB"><img src="res/icons/32-twitter.png" style="margin-top: 0.8em;" /></a>
 	<a href="https://www.linkedin.com/profile/view?id=378463039"><img src="res/icons/32-linkedin.png" /></a>
 	<a href="https://fb.me/felix.deboer"><img src="res/icons/32-facebook.png" /></a>
 	</div>
@@ -31,7 +31,11 @@
 	<span class="small_description">Tutorials on fixing and creating anything from Arduino to woodworking.</span>
 	<br />
 	<a href="http://www.last.fm/user/sdk164">Last.fm</a>
-	<span class="small_description">Feel free to judge me on the music I listen, but do it in silence.</span>	
+	<span class="small_description"></span>
+	<br />
+	<a href="http://forum.xda-developers.com/member.php?u=4196443">XDA Developers</a>
+	<span class="small_description">Android development, tweaking and design.</span>
+	
 	</section>
 	
 	<div id="footer"></div>
