--- a/worldnews.html
+++ b/worldnews.html
@@ -18,15 +18,15 @@
 		$('#header').load('header.html');
 	});
 	</script>
-	
 	<section id="main">
 	<h2>World news websites</h2>
-	<p>The table below lists my preferred news source for each country. Click the table headers to sort the entries.</p>
+	<p>The table below lists a quality news source for each country. Click the table headers to sort the entries.</p>
 	<table class="sortable">
 		<tr><th title="click the header to sort">Country</th><th title="click the header to sort">Website</th></tr>
 		<tr><td>Belgium</td><td><a href="http://www.standaard.be">De Standaard</a></td></tr>
 		<tr><td>China</td><td><a href="http://www.infzm.com">南方周末 (Southern Weekly)</a></td></tr>
 		<tr><td>Denmark</td><td><a href="http://politiken.dk">Politiken</a></td></tr>
+		<tr><td>France</td><td><a href="http://www.lemonde.fr/">Le Monde</a></td></tr>
 		<tr><td>Germany</td><td><a href="http://www.spiegel.de">Der Spiegel</a></td></tr>
 		<tr><td>Iceland</td><td><a href="http://www.ruv.is">R&Uacute;V</a></td></tr>
 		<tr><td>The Netherlands</td><td><a href="http://www.nrc.nl">NRC Handelsblad</a></td></tr>
