--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
-	<title>FQDB</title>
+	<title>Felix de Boer</title>
 	
 </head>
 <body>
