--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,13 @@
 	</div>
 	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
 	<p><h3>Other channels</h3>
+	<a href="https://www.goodreads.com/fqdb">Goodreads</a>
+	<span class="small_description">Books I've read and am currently reading</span>
 	<a href="http://www.instructables.com/member/MaterialBall/">Instructables</a>
 	<span class="small_description">Tutorials on fixing and creating anything from Arduino to woodworking.</span>
 	<br />
 	<a href="http://www.last.fm/user/sdk164">Last.fm</a>
-	<span class="small_description"></span>
+	<span class="small_description">Music</span>
 	<br />
 	<a href="http://forum.xda-developers.com/member.php?u=4196443">XDA Developers</a>
 	<span class="small_description">Android development, tweaking and design.</span>
