--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
-	<title>FQDB</title>
+	<title>Felix de Boer</title>
 </head>
 <body>
 	<div id="header"></div>
@@ -29,16 +29,17 @@
 	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
 	<p><h3>Other channels</h3>
 	<a href="https://www.goodreads.com/fqdb">Goodreads</a>
-	<span class="small_description">Books I've read and am currently reading</span>
+	<span class="small_description">Books I've read and am currently reading.</span>
+	<br />
 	<a href="http://www.instructables.com/member/MaterialBall/">Instructables</a>
 	<span class="small_description">Tutorials on fixing and creating anything from Arduino to woodworking.</span>
 	<br />
 	<a href="http://www.last.fm/user/sdk164">Last.fm</a>
-	<span class="small_description">Music</span>
+	<span class="small_description">Music I listen.</span>
 	<br />
 	<a href="http://forum.xda-developers.com/member.php?u=4196443">XDA Developers</a>
 	<span class="small_description">Android development, tweaking and design.</span>
-	
+	<br />
 	</section>
 	
 	<div id="footer"></div>
