--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 	</script>
 	
 	<section id="main">
-	<h2 style="margin-bottom: 0.5em">Hello.</h2>
-	<p>My name is Felix. I follow the bachelor program of Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span>.</p>
-	<p>Some interests of mine include mechanical and materials science; programming; building, modifying and disassembling devices; UI design.</p>
-	<p><br /><a href="contact.html">Contact<a></p>
+	<h2 style="margin-bottom: 0.5em">Hello</h2>
+	<p>
+	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year.
+	</p>
+	<p>
+	
+	</p>
 	</section>
 	
 	<div id="twitter_widget"></div>
