--- a/speeddial.html
+++ b/speeddial.html
@@ -19,9 +19,9 @@ Speeddial
 <section id="tiles">
 <a href="https://tweetdeck.twitter.com/"><div class="tile"><img src="res/speeddial/tweetdeck.jpg"/><br/>TweetDeck</div></a>
 <a href="https://calendar.google.com/"><div class="tile"><img src="res/speeddial/calendar.jpg"/><br/>Calendar</div></a>
-<a href="https://forum.xda-developers.com/login.php?do=login"><div class="tile"><img src="res/speeddial/xdadev.jpg"/>XDA Developers</div></a>
+<a href="https://boards.4chan.org/g/catalog"><div class="tile"><img src="res/speeddial/g_technology.jpg"/>4chan /g/catalog</div></a>
 <a href="https://www.youtube.com/feed/subscriptions"><div class="tile"><img src="res/speeddial/youtube.jpg"/>YouTube</a></div>
-<a href="http://outlook.com/"><div class="tile"><img src="res/speeddial/email.jpg"/>E-mail</a></div>
+<a href="http://outlook.com/"><div class="tile"><img src="res/speeddial/email.jpg"/>Outlook.com</a></div>
 <a href="http://theoldreader.com/"><div class="tile"><img src="res/speeddial/rssreader.jpg"/>RSS reader</a></div>
 <a href="http://blackboard.tudelft.nl/"><div class="tile"><img src="res/speeddial/blackboard.jpg"/>TU Delft Blackboard</a></div>
 <a href="http://www.tweakers.net"><div class="tile"><img src="res/speeddial/tweakers.jpg"/>Tweakers</a></div>
