--- a/res_credits.html
+++ b/res_credits.html
@@ -27,11 +27,8 @@
 		<li>Title font: <a href="https://www.google.com/fonts/">Old Standard TT</a></li>
 		<li>Paragraph font: <a href="https://www.google.com/fonts/">Open Sans 600</a></li>
 	</ul>
-	<p><em>All logos are trademarks of their respective owners.</em></p>
 	<h3>Notes</h3>
-	<p>This website needs JavaScript (jQuery) to function correctly.
-	If you have come this far JavaScript is probably enabled already.</p>
-	<p>Source is also available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a>.
+	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a>.
 
 </section>
 	
