--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year.
 	</p>
 	<p>
-	
+	<img src="res/photo/TNW_flickr.jpg" style="margin-top: 1em" /><br/>
+	<span class="small_description"><i>Applied Sciences building in Delft</i>. Photo by ADD Photography. <a href="https://www.flickr.com/photos/jvanroyen/3272813720/in/photolist-aYGa7-hh2DWv-5Zd2uL-6ykA6R-hegtA1-hegwoL">Flickr</a>/<a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></span>
 	</p>
 	</section>
 	
