--- a/battlestation.html
+++ b/battlestation.html
@@ -43,7 +43,7 @@
 	<p>I received the Toshiba C660-10D somewhere mid 2011. &euro;450 should do for a laptop. And it does. I use it 8 hours a day on average, I've taken it with me almost every day for four years. Yet, nothing has broken because of wear. Everything about it is function over form, the bland black plastic is military grade, the lack of ports keep the dust out and the slow CPU needs little cooling.</p>
 	<p>It does have flaws: the keyboard still works good, but it's prone to impact damage. The screen is garbage. It's heavy.</p>
 	<p>I don't think I'll ever get rid of it though. When I will finally give way for a slimmer laptop, the Toshiba will probably become a server, NAS, or HTPC.</p>
-	<img src="res/photo/toshiba_speccy.png" />
+	<img src="res/photo/toshiba.png" />
 	</section>
 
 	<div id="footer"></div>
