--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
 	</script>
 	
 	<section id="main">
-	<h2 style="margin-bottom: 0.5em">Hello</h2>
+	<h1 style="margin-bottom: 0.5em">Hello</h1>
 	<p>
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year.
 	</p>
+	<h2>Projects</h2>
 	<p>
+	<ul>
+	<li>Determining doping type of silicon wafer using Schottky barrier properties</li>
+	<li>Prototyping a 3D laser system</li>
+	</p>
 	<img src="res/photo/TNW_flickr.jpg" style="margin-top: 1em" /><br/>
 	<span class="small_description"><i>Applied Sciences building in Delft</i>. Photo by ADD Photography. <a href="https://www.flickr.com/photos/jvanroyen/3272813720/in/photolist-aYGa7-hh2DWv-5Zd2uL-6ykA6R-hegtA1-hegwoL">Flickr</a>/<a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></span>
-	</p>
 	</section>
 	
 	<div id="twitter_widget"></div>
