--- a/contact.html
+++ b/contact.html
@@ -18,28 +18,27 @@
 	</script>
 	
 	<section id="main">
-	<h2>Get in touch</h2>
+	<h1>Contact</h1>
 	<div id="contact">
-	<h3>Social networks and mail</h3>
+	<h2>Social networks and mail</h2>
 	<a href="https://www.twitter.com/FQdeB"><img src="res/icons/32-twitter.png" style="margin-top: 0.8em;" /></a>
 	<a href="https://www.linkedin.com/profile/view?id=378463039"><img src="res/icons/32-linkedin.png" /></a>
 	<!-- <a href="https://fb.me/felixdeboer"><img src="res/icons/32-facebook.png" /></a> -->
 	<a href="https://telegram.me/felixdeboer"><img src="res/icons/telegram_logo.png" width="32px" height="32px"/></a>
 	</div>
 	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
-	<p><h3>Other channels</h3>
-	<a href="https://www.goodreads.com/fqdb">Goodreads</a>
-	<span class="small_description">Books I've read and am currently reading.</span>
-	<br />
-	<a href="http://www.instructables.com/member/MaterialBall/">Instructables</a>
-	<span class="small_description">Tutorials on fixing and creating anything from Arduino to woodworking.</span>
-	<br />
-	<a href="http://www.last.fm/user/sdk164">Last.fm</a>
-	<span class="small_description">Music I listen.</span>
-	<br />
-	<a href="http://forum.xda-developers.com/member.php?u=4196443">XDA Developers</a>
-	<span class="small_description">Android development, tweaking and design.</span>
-	<br />
+	<p id = "other"><h2>Other</h2>
+	<ul style="list-style-type: none">
+	<li>
+	<a href="https://www.goodreads.com/fqdb">Goodreads</a>: Books I've read and am currently reading.
+	</li>
+	<li>
+	<a href="http://www.instructables.com/member/MaterialBall/">Instructables</a>: DIY stuff
+	</li>
+	<li>
+	<a href="http://www.last.fm/user/sdk164">Last.fm</a>: Music
+	</li>
+	</ul>
 	</section>
 	
 	<div id="footer"></div>
