Removed Twitter widget

--- a/header.html
+++ b/header.html
@@ -26,6 +26,7 @@
 		<ul>
 		<li><a href="resume.html">Resume</a></li>
 		<li><a href="contact.html">Contact</a></li>
+		<li><a href="#" onclick="myFunction()" class="Tweets">Tweets</a></li>
 		</ul>
 	</nav>
 	</header>
