Battlestation page changes

--- a/battlestation.html
+++ b/battlestation.html
@@ -21,23 +21,14 @@
 	<section id="main">
 	<h2>Battlestation: desktop</h2>
 	<p style="padding-top: 1em">
-	<a href="res/photo/battlestation.jpg" target="_blank"><img src="res/photo/battlestation.jpg" /></a>
-	<span class="small_description">In all it's glorious cheapness...</span>
+	<img src="res/photo/guts.jpg" />
+	<span class="small_description">I have done some cable management since this picture was taken.</span>
 	</p>
-	<h3>Specifications</h3>
+	<p>All parts were collected from 2013-2015 from <a href="http://www.tweakers.net/aanbod/">used components</a>, stuff from my parents' attic and <a href="http://www.dx.com/">DealExtreme</a>. For work and study I have used a laptop for years, but gaming is not an option on that. Thus I created a challenge and fun project for myself: building a gaming PC for as little as possible. The result isn't amazing, but it does forfill my needs for now. Due to the aging Core 2 Duo CPU on a cheap motherboard, there's no upgrade path, but the benefit is the availability of cheap used DDR2 RAM. Still, the Core 2 Duo is fast enough for office tasks and older games.</p>
+	<p>The GPU took a massive cut out of the budget at &euro;45 (and even more if you include the need for a new PSU), but it's a great GPU for lower resolutions and older games. New it was worth &euro;400 in 2010, so in that light I finally own an enthousiast tier graphics card!</p>
 	<p>
-	<table>
-	<tr>
-	<tr><th>Part</th><th>Description</th><th>Price</th><th>other</th></tr>
-	<tr><td>PC</td><td>AsRock ConRoe945G-DVI<br />Intel Core 2 Duo E4400<br />Sapphire HD 5850 Toxic</td><td>&euro;115</td><td><a href="http://tweakers.net/gallery/408561?inv_id=687585#tab:inventaris">details</a></td></tr>
-	<tr><td>Monitor</td><td>Acer V203H</td><td>&euro;40</td><td></td></tr>
-	<tr><td>Speakers</td><td>Philips</td><td>Found in the attic</td><td></td></tr>
-	<tr><td>Amplifier</td><td>FeiXiang FX-152E</td><td>&euro;20</td><td><a href="http://www.dx.com/p/feixiang-fx-152e-15w-digital-hifi-amplifier-black-silver-208115#.VPoswdJ0zDc">shop</a></td></tr>
-	</table>
+	<img src="res/photo/PC_specs.png" />
 	</p>
-	<h3>About</h3>
-	<p>All parts were collected from 2013-2015 from <a href="http://www.tweakers.net/aanbod/">used components</a>, stuff from my parents' attic and <a href="http://www.dx.com/">DealExtreme</a>. For work and study I have used a laptop for years, but gaming is not an option on that. Thus I created a challenge and fun project for myself: building a gaming PC for as little as possible. The result isn't amazing, but it does forfill my needs for now. Due to the aging Core 2 Duo CPU on a cheap motherboard, there's no upgrade path, but the benefit is the availability of cheap DDR2 RAM. Still, the Core 2 Duo is near the level of current entry-level Intel CPUs.</p>
-	<p>The GPU took a massive cut out of the budget at &euro;45 (and even more if you include the need for a new PSU), but it's a great GPU for lower resolutions and older games. New it was worth &euro;400 in 2010.</p>
 	<h2 style="padding-top: 1em">Battlestation: laptop</h2>
 	<p>Spending a lot of time with someone or something makes you hate it or love it. This is the case with my laptop. I've come to like it, despite it being a cheap, bland looking and quite slow device.</p>
 	<p>I received the Toshiba C660-10D somewhere mid 2011. &euro;450 should do for a laptop. And it does. I use it 8 hours a day on average, I've taken it with me almost every day for four years. Yet, nothing has broken because of wear. Everything about it is function over form, the bland black plastic is military grade, the lack of ports keep the dust out and the slow CPU needs little cooling.</p>
