--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,13 @@
 <footer>
-	<span class="left_footer">© FQDB 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
+<script>
+$(document).ready(function(){
+	$("#hidden_menu").click(function(){
+    $("#hidden_nav").toggle();
+	});
+});
+
+</script>
+	<span class="left_footer">© <a id="hidden_menu" href="#" style="cursor: default">FQDB</a> 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
 	<span class="right_footer"><a href="res_credits.html">res credits</a></span>
 	</div>
 </footer>
