--- a/header.html
+++ b/header.html
@@ -24,9 +24,15 @@
 	<nav>
 		<a href="#" id="menu-icon"></a>
 		<ul>
-		<li><a href="resume.html">Resume</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
+			<li><a href="resume.html">Resume</a></li>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
+		</ul>
+		<ul id="hidden_nav">
+			<li><a href="battlestation.html">Battlestation</a></li>
+			<li><a href="mathjax_test.html">MathJax test</a></li>
+			<li><a href="speeddial.html">Speeddial</a></li>
+			<li><a href="worldnews.html">Worldnews</a></li>
 		</ul>
 	</nav>
 	</header>
