--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@ $(document).ready(function(){
 });
 
 </script>
-	<span class="left_footer">© <a id="hidden_menu" href="#" style="cursor: default">FQDB</a> 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
+	<span class="left_footer"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">CC BY-NC-ND</a> <a id="hidden_menu" href="#" style="cursor: default">FQDB</a> 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
 	<span class="right_footer"><a href="res_credits.html">res credits</a></span>
 	</div>
 </footer>
