--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 	<span class="small_description"><i>Applied Sciences building in Delft</i>. Photo by ADD Photography. <a href="https://www.flickr.com/photos/jvanroyen/3272813720/in/photolist-aYGa7-hh2DWv-5Zd2uL-6ykA6R-hegtA1-hegwoL">Flickr</a>/<a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></span>
 	</p>
 	</section>
-
+			
+	<div id="twitter_widget"></div>
+	<script type="text/javascript" language="javascript">
+	$(document).ready(function() {
+		$('#twitter_widget').load('twitter_widget.html');
+	});
+	</script>
+	
 	<div id="footer"></div>
 	<script type="text/javascript" language="javascript">
    $(document).ready(function() {
