Teaser tiles, improved image descriptions

--- a/header.html
+++ b/header.html
@@ -37,6 +37,7 @@
 	</nav>
 	<script>
 		// Hide Header on on scroll down
+		// Made by https://medium.com/@mariusc23/hide-header-on-scroll-down-show-on-scroll-up-67bbaae9a78c
 	var didScroll;
 	var lastScrollTop = 0;
 	var delta = 5;
