Responsive teaser tiles

--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
         arrows:true,
 		slidesToShow: 2,
 		slidesToScroll: 1,
-		adaptiveHeight: true,
 		speed: 100,
-		dots: true
+		dots: true,
+		responsive: [
+		{
+		breakpoint: 480,
+		settings: "unslick"
+		}
+			]
       });
     });
 	</script>
