Put hidden menu on hold

--- a/header.html
+++ b/header.html
@@ -29,10 +29,7 @@
 			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
 		</ul>
 		<ul id="hidden_nav">
-			<li><a href="page/battlestation.html">Battlestation</a></li>
-			<li><a href="page/mathjax_test.html">MathJax test</a></li>
-			<li><a href="page/speeddial.html">Speeddial</a></li>
-			<li><a href="page/worldnews.html">Worldnews</a></li>
+			<li><i>Hidden nav is on hold for now</i></li>
 		</ul>
 	</nav>
 	<script>
