--- a/res_credits.html
+++ b/res_credits.html
@@ -26,9 +26,10 @@
 		<li>Logo font: <a href="http://freakfonts.com/">FrutigerNext LT</a></li>
 		<li>Title font: <a href="https://www.google.com/fonts/">Old Standard TT</a></li>
 		<li>Paragraph font: <a href="https://www.google.com/fonts/">Open Sans 600</a></li>
+		<li>Responsive caroussels: <a href="http://kenwheeler.github.io/slick/">slick</a>
 	</ul>
 	<h3>Notes</h3>
-	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a>.
+	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a> under Creative Commons Attribution-NonCommercial-NoDerivatives licence. But it's better to take something without 4 responsive breakpoints and 3 stylesheets as a starting point.
 
 </section>
 	
