Custom caroussel UI

--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,8 @@
 	
 	<section id="main">
 	<h1>Contact</h1>
-	<div id="contact">
-	<a href="https://www.twitter.com/FQdeB"><img src="res/icons/32-twitter.png" style="margin-top: 0.8em;" /></a>
-	<a href="https://www.linkedin.com/profile/view?id=378463039"><img src="res/icons/32-linkedin.png" /></a>
-	<!-- <a href="https://fb.me/felixdeboer"><img src="res/icons/32-facebook.png" /></a> -->
-	<a href="https://telegram.me/felixdeboer"><img src="res/icons/telegram_logo.png" width="32px" height="32px"/></a>
-	</div>
-	<p><br />E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
+	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
+	<p>Telegram: <a href="https://telegram.me/felixdeboer">@FelixDeBoer</a></p>
 	</section>
 	
 	<div id="footer"></div>
