--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<script src="jquery-2.1.1.js"></script>
 		<!-- For slideshow -->	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-							<link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css"/>
+							<link rel="stylesheet" type="text/css" href="slick-theme.css"/>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
@@ -33,6 +33,9 @@
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/mathjax_test.html">Trying out MathJax</a></span><br><span class="teaser_text">
 	LaTeX formula syntax rendered in your browser - exploring the possibilities of the MathJax framework.</span>
 	</div>
+	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/demo.html">Obligatory Lorem Ipsum</a></span><br><span class="teaser_text">
+	This is a placeholder tile until I have something to share and time to make it into a presentable webpage.</span>
+	</div>
 	</div>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
 	<script type="text/javascript">
@@ -43,6 +46,7 @@
 		slidesToScroll: 1,
 		speed: 100,
 		dots: true,
+		infinite: false,
 		responsive: [
 		{
 		breakpoint: 480,
@@ -53,12 +57,12 @@
     });
 	</script>
 	
-	<h2>Current projects</h2>
+	<h2>Projects</h2>
 	<p>
 	<ul>
 	<li>Determining doping type of silicon wafer using Schottky barrier properties</li>
-	<li>Prototyping a 3D laser system</li>
-	<li>Bachelor thesis: Transport properties of lithium batteries (WIP)</li>
+	<li>Prototyping a 3D laser rig</li>
+	<li>Bachelor thesis: Physical phenomena behind cycle life poor cycle life of lithium-silicon batteries </li>
 	</ul>
 	</p>
 	<p>
