--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 	</p>
 	<h2>Featured posts</h2>
 	<div class="teaser" style="padding-top:1em;">
+	<div class="teaser_tile"><span style="font-weight:bold"><a href="cm11_theme_for_huawei_emui_30.html">Building a CM11 theme for EMUI 3.0</a></span><br><span class="teaser_text">
+	Project homepage where updates about the project will be posted as well as documentation.</span>
+	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/emui_3.0_vs_miui_v6.html">EMUI 3.0 vs. MIUI V6</a></span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
 	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/mathjax_test.html">Trying out MathJax</a></span><br><span class="teaser_text">
 	LaTeX formula syntax rendered in your browser - exploring the possibilities of the MathJax framework.</span>
-	</div>
-	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/demo.html">Obligatory Lorem Ipsum</a></span><br><span class="teaser_text">
-	This is a placeholder tile until I have something to share and time to make it into a presentable webpage.</span>
 	</div>
 	</div>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
