--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
 	<nav>
 		<a href="#" id="menu-icon"></a>
 		<ul>
-			<li><a href="resume.html">Resume</a></li>
+			<!-- <li><a href="resume.html">Resume</a></li> -->
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
 		</ul>
