--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	</p>
 	<h2>Featured posts</h2>
 	<div class="teaser" style="padding-top:1em;">
+	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/huawei_ascend_p7_sample _pics.html">Ascend P7 sample pictures</a></span><br><span class="teaser_text"><br><br>
+	 </span>
+	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/cm11_theme_for_huawei_emui_30.html">Building a CM11 theme for EMUI 3.0</a></span><br><span class="teaser_text">
 	Project homepage where updates about the project will be posted as well as documentation.</span>
 	</div>
@@ -47,6 +50,7 @@
 		speed: 100,
 		dots: true,
 		infinite: false,
+		adaptiveHeigh: false,
 		responsive: [
 		{
 		breakpoint: 480,
