--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
 		<a href="#" id="menu-icon"></a>
 		<ul>
 			<!-- <li><a href="resume.html">Resume</a></li> -->
-			<li><a href="contact.html">Contact</a></li>
+			<li><a href="https://fqdb.github.io/contact.html">Contact</a></li>
 			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
 		</ul>
 		<ul id="hidden_nav">
