€1 USB hub review

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	</p>
 	<h2>Featured posts</h2>
 	<div class="teaser" style="padding-top:1em;">
-	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/huawei_ascend_p7_sample_pics.html">Ascend P7 sample pictures</a></span><br><span class="teaser_text"><br>
-	 </span><span class="teaser_text">Looking quite good.</span>
+	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/1euro_usb_hub_review.html">&euro;1 USB hub review</a></span><br><span class="teaser_text">
+	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
 	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/cm11_theme_for_huawei_emui_30.html">Building a CM11 theme for EMUI 3.0</a></span><br><span class="teaser_text">
 	Project homepage where updates about the project will be posted as well as documentation.</span>
