--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<ul>
 	<li>Determining doping type of silicon wafer using Schottky barrier properties</li>
 	<li>Prototyping a 3D laser rig</li>
-	<li>Bachelor thesis: Physical phenomena behind cycle life poor cycle life of lithium-silicon batteries </li>
+	<li>Bachelor thesis: Observation of SEI layer formation in lithium-silicon batteries </li>
 	</ul>
 	</p>
 	<p>
