--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,6 @@ $(document).ready(function(){
 });
 </script>
 	<span class="left_footer"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode" style="font-size: 0.8em">CC BY-NC-ND</a> <a id="hidden_menu" href="#" style="cursor: default">FQDB</a> 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
-	<span class="right_footer"><a href="res_credits.html">about</a></span>
+	<span class="right_footer"><a href="about.html">about</a></span>
 	</div>
 </footer>
