--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/emui_3.0_vs_miui_v6.html">EMUI 3.0 vs. MIUI V6</a></span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
 	</div>
+	</div>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
 	<script type="text/javascript">
     $(document).ready(function(){
