Dag van de bouw 2015

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	</p>
 	<h2>Featured posts</h2>
 	<div class="teaser" style="padding-top:1em;">
+		<div class="teaser_tile"><span style="font-weight:bold"><a href="page/dagvandebouw_2015.html">Bezoek TNW-zuid - Dag van de bouw</a></span><br><span class="teaser_text">
+	 </span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen. </span>
+	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/1euro_usb_hub_review.html">&euro;1 USB hub review</a></span><br><span class="teaser_text">
 	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
 	</div>
